// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[V3][V3] XCM tests for Mangata <-> imbue [V3] imbue transfer assets to [V3] mangata: After 1`] = `
{
  "consumers": 0,
  "data": {
    "flags": "0x80000000000000000000000000000000",
    "free": 4996175428168,
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 1,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`[V3][V3] XCM tests for Mangata <-> imbue [V3] imbue transfer assets to [V3] mangata: After 2`] = `
{
  "free": 1004983872000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`[V3][V3] XCM tests for Mangata <-> imbue [V3] imbue transfer assets to [V3] mangata: Before 1`] = `
{
  "free": 1000000000000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`[V3][V3] XCM tests for Mangata <-> imbue [V3] imbue transfer assets to [V3] mangata: Before 2`] = `
{
  "consumers": 0,
  "data": {
    "flags": 0,
    "free": 10000000000000,
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`[V3][V3] XCM tests for Mangata <-> imbue [V3] imbue transfer assets to [V3] mangata: system events 1`] = `[]`;

exports[`[V3][V3] XCM tests for Mangata <-> imbue [V3] mangata transfer assets to [V3] imbue: After 1`] = `
{
  "free": 990000000000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`[V3][V3] XCM tests for Mangata <-> imbue [V3] mangata transfer assets to [V3] imbue: After 2`] = `
{
  "consumers": 0,
  "data": {
    "flags": "0x80000000000000000000000000000000",
    "free": 19968573320750,
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`[V3][V3] XCM tests for Mangata <-> imbue [V3] mangata transfer assets to [V3] imbue: Before 1`] = `
{
  "free": 1000000000000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`[V3][V3] XCM tests for Mangata <-> imbue [V3] mangata transfer assets to [V3] imbue: Before 2`] = `
{
  "consumers": 0,
  "data": {
    "flags": 0,
    "free": 10000000000000,
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`[V3][V3] XCM tests for Mangata <-> imbue [V3] mangata transfer assets to [V3] imbue: system events 1`] = `[]`;
